syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "logevnt/pb";

message StartEventRequest {
    string  guid = 1;
    string  name = 2;
}

message StartEventResponse {
    string  guid = 1;
}

message LogEventRequest {
    string  guid = 1;
    string  ip = 2;
    google.protobuf.Timestamp time = 3;
    string  method = 4;
    string  path = 5;
    int32   status = 6;
    int64   process_time = 7;
    string  full_log = 8;
}

message LogEventResponse {
    string  guid = 1;
}

message EndEventRequest {
    string  guid = 1;
}

message EndEventResponse {
    string  guid = 1;
    string  name = 2;
    int64 num_unique_ip = 3;
    repeated string top_client_ips = 4;
    repeated string top_visited_urls = 5;
}

service LogEvent {
    rpc Start (StartEventRequest) returns (StartEventResponse) {}
    rpc Event (stream LogEventRequest) returns (LogEventResponse) {}
    rpc End (EndEventRequest) returns (EndEventResponse) {}
}